<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CalculatorFragment"
    >

    <TextView
        android:id="@+id/cf_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/armor_calculator"
        android:textSize="35sp"
        android:gravity="center"

        app:layout_constraintBottom_toTopOf="@+id/sv_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cf_title">

        <LinearLayout
            android:id="@+id/sections_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/class_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:layout_marginBottom="5dp"
                android:orientation="vertical"
                >

                <RadioGroup
                    android:id="@+id/rg_hit_dice_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <RadioButton
                        android:id="@+id/rbtn_d6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d6"
                        android:textSize="25sp"
                        android:layout_marginHorizontal="10dp"
                        android:checked="true"
                        />

                    <RadioButton
                        android:id="@+id/rbtn_d8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d8"
                        android:textSize="25sp"
                        android:layout_marginHorizontal="10dp"
                        />

                    <RadioButton
                        android:id="@+id/rbtn_d10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d10"
                        android:textSize="25sp"
                        android:layout_marginHorizontal="10dp"
                        />

                    <RadioButton
                        android:id="@+id/rbtn_d12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d12"
                        android:textSize="25sp"
                        />
                </RadioGroup>
                <EditText
                    android:id="@+id/et_class_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_class_level"
                    android:textSize="30sp"
                    android:inputType="number"
                    />

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/sw_multiclass"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:switchMinWidth="60dp"
                    app:switchPadding="5dp"
                    android:layout_marginVertical="5dp"
                    android:checked="false"
                    android:text="@string/multiclass"
                    android:textSize="30sp"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/multiclass_section"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:orientation="vertical"
                android:visibility="gone"
                >
                <RadioGroup
                    android:id="@+id/rg_mc_hit_dice_section"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center"
                    >

                    <RadioButton
                        android:id="@+id/rbtn_mc_d6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d6"
                        android:textSize="25sp"
                        android:layout_marginHorizontal="10dp"
                        android:checked="true"
                        />

                    <RadioButton
                        android:id="@+id/rbtn_mc_d8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d8"
                        android:textSize="25sp"
                        android:layout_marginHorizontal="10dp"
                        />

                    <RadioButton
                        android:id="@+id/rbtn_mc_d10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d10"
                        android:textSize="25sp"
                        android:layout_marginHorizontal="10dp"
                        />

                    <RadioButton
                        android:id="@+id/rbtn_mc_d12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/d12"
                        android:textSize="25sp"
                        />
                </RadioGroup>
                <EditText
                    android:id="@+id/et_mc_class_level"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/enter_class_level"
                    android:textSize="30sp"
                    android:inputType="number"
                    />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/section_4_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"

                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/section_3_layout">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"

                    android:text="@string/select_your_armor_weight_class"
                    android:textSize="24sp"
                    />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="start"

                    android:text="@string/note_unarmored_defense_medium"
                    android:textSize="16sp"
                    />
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >

                    <RadioButton
                        android:id="@+id/rbtn_light"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/light"
                        android:textSize="20sp"
                        />

                    <RadioButton
                        android:id="@+id/rbtn_medium"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/medium"
                        android:textSize="20sp"
                        />
                    <RadioButton
                        android:id="@+id/rbtn_heavy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/heavy"
                        android:textSize="20sp"
                        />
                </RadioGroup>

            </LinearLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_calculate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calculate"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/btn_color"
                />
            <TextView
                android:id="@+id/tv_total_armor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/total_armor_hp"
                android:textSize="25sp"
                android:layout_marginStart="7dp"
                />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>