<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".InfoFragment">

        <TextView
            android:id="@+id/tv_app_info_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_info"
            android:textSize="30sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_app_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:hint="app info goes here"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv_rules_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rules"
            android:layout_marginTop="12dp"
            android:textSize="30sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_rules"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:hint="rules go here"
            android:textSize="24sp"
            />

        <TextView
            android:id="@+id/tv_extra_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/extra_info"
            android:layout_marginTop="12dp"
            android:textSize="30sp"
            android:gravity="center"
            />

        <TextView
            android:id="@+id/tv_extra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:hint="extra info goes here"
            android:textSize="24sp"
            />

    </LinearLayout>
</ScrollView>